--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "axios": "^1.1.2",
+    "core-js": "^3.25.5",
     "jquery": "^3.6.1",
     "source-map-url": "^0.4.1",
-    "vue": "^3.2.13",
-    "vue-router": "^4.1.5"
+    "vue": "^3.2.40",
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
